# TTPAOLa-Artifact

./: .gitignore  Dockerfile  LICENSE  README.md  kickstart.sh  timed-ttpaola.cabal  timed-typaol.cabal
app/: Main.hs
src/TTpaola/: Consent.hs  Eval.hs  Interpreter.hs  Runtime.hs  Scheduler.hs  Syntax.hs  TypeChecker.hs  TypedInterpreter.hs  Types.hs
src/TTpaola/Examples/: FoodDelivery.hs
src/TyPAOL/: Consent.hs  Eval.hs  Interpreter.hs  Runtime.hs  Scheduler.hs  Syntax.hs  TypeChecker.hs  TypedInterpreter.hs  Types.hs
src/TyPAOL/Examples/: FoodDelivery.hs
test/: ConsentTest.hs  EvalTest.hs  InterpreterTest.hs  LitmusTest.hs  MigrationTest.hs  SafetyTest.hs  Spec.hs  TypeCheckerTest.hs
